--- a/HomeWork sites/практика css 5/practies/index.html
+++ b/HomeWork sites/практика css 5/practies/index.html
@@ -36,7 +36,7 @@
                 <input type="text" class="textinput" placeholder="Напишите сообщение">
             </form>
             <div class="lorem10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, unde natus. Earum sed eos molestiae explicabo consequuntur, sit maiores dolor! Similique neque ex error inventore totam optio soluta asperiores deleniti.</div>
-            <div class="lorem20">Lorem ipsum dolor amet consectetur adipisicing elit. Architecto, minus placeat! Omnis veritatis atque provident quos, tempore corrupti recusandae, nobis ipsum dolore nostrum possimus hic odio labore. Voluptatum, delectus ipsum.</div>        
+            <div class="lorem20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, minus placeat! Omnis veritatis atque provident quos, tempore corrupti recusandae, nobis ipsum dolore nostrum possimus hic odio labore. Voluptatum, delectus ipsum.</div>        
         </div>
     </body>
 </html>
