--- a/Sites/site 1/index.html
+++ b/Sites/site 1/index.html
@@ -8,6 +8,9 @@
    <title>Site 1</title>
 </head>
 <body>
-   
+   <div class="block">
+      <div class="bg"></div>
+      <h1 class="tittle">slide templete</h1>
+   </div>
 </body>
 </html>
