--- a/Sites/site 2/index.html
+++ b/Sites/site 2/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
    <div class="block">
-      <div></div>
+      <div>
+         <div class="line"></div>
+      </div>
       <div></div>
       <div></div>
    </div>
