Добавил заголовок, текст и ещё поигрался с цветом

--- a/Sites/site 2/index.html
+++ b/Sites/site 2/index.html
@@ -12,7 +12,30 @@
       <div>
          <div class="line"></div>
       </div>
-      <div></div>
+      <div>
+         <div class="margin">
+            <div class="title">
+               <span>Dolor</span>
+               <span>sit amet</span>
+            </div>
+            <div class="margin">
+               <div class="item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, libero.
+               </div>
+               <div class="margin">
+                  <div class="item">
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, eligendi.
+                  </div>
+               </div>
+               <div class="item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, delectus.
+               </div>
+            </div>
+            <div class="item">
+               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis, temporibus.
+            </div>
+         </div>
+      </div>
       <div></div>
    </div>
 </body>
