--- a/HomeWork sites/Страничка на flexbox/Страничка на flexbox/index.html
+++ b/HomeWork sites/Страничка на flexbox/Страничка на flexbox/index.html
@@ -14,14 +14,128 @@
                <div class="hi__row">
                   <div class="hi__body">
                      <div class="hi__tittle">Привет, Друг!</div>
-                     <ul class="list">
+                     <ul class="hi__list">
                         <li>У тебя все получится!</li> 
                         <li>Никогда не сдавайся!</li>
                         <li>Сегодня ты уже знаешь больше чем вчера!</li>
                         <li>Спасибо тебе за поддержку!</li> 
                      </ul>
                   </div>
-                  <div class="hi__img"></div>
+                  <div class="hi__img">
+                     <img src="img/maxresdefault-3.jpg" alt="front-end">
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="what">
+            <div class="conteiner">
+               <div class="what__row">
+                  <div class="what__image">
+                     <img src="img/img_2.png" alt="img_2">
+                  </div>
+                  <div class="what__body">
+                     <div class="what__title title">
+                        Что такое FlexBox?
+                     </div>
+                     <div class="what__text">
+                        <p>Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для родителя flex-контейнера так и для его дочерних элементов flex-элементов.</p>
+                        <p>Основным преимуществом гибкой FLEX разметки является возможность изменять ширину/высоту пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом заполнить доступное пространство flex-контейнера</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="columns">
+         <div class="conteiner">
+            <div class="columns__title title">Колонки с flex-контейнерами</div>
+            <div class="columns__row">
+               <div class="columns__column">
+                  <div class="columns__item item">
+                     <div class="item__row">
+                        <div class="item__image">
+                           <img src="img/image_3.png" alt="image_3">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__title">The description for the image</div>
+                           <div class="item__text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="columns__column">
+                  <div class="columns__item item">
+                     <div class="item__row">
+                        <div class="item__image">
+                           <img src="img/image_3.png" alt="image_3">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__title">The description for the image</div>
+                           <div class="item__text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="columns__column">
+                  <div class="columns__item item">
+                     <div class="item__row">
+                        <div class="item__image">
+                           <img src="img/image_3.png" alt="image_3">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__title">The description for the image</div>
+                           <div class="item__text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="columns__column">
+                  <div class="columns__item item">
+                     <div class="item__row">
+                        <div class="item__image">
+                           <img src="img/image_3.png" alt="image_3">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__title">The description for the image</div>
+                           <div class="item__text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="vertical">
+         <div class="conteiner">
+            <div class="vertical__title title">Колонки с flex-контейнерами</div>
+            <div class="vertical__body">
+               <div class="vertical__row">
+                  <div class="vertical__column">
+                     <div class="vertical__item">
+                        <div class="vertical__subtitle">Мотивация</div>
+                        <div class="vertical__label">зарабатывать</div>
+                        <div class="vertical__text">Дэвид Бейли: «Чтобы стать богатым, вы должны зарабатывать деньги, пока вы спите».</div>
+                        <a href="#" class="vertical__bth">не ленись!</a>
+                     </div>
+                  </div>
+                  <div class="vertical__column">
+                     <div class="vertical__item">
+                        <div class="vertical__subtitle">Мотивация</div>
+                        <div class="vertical__label">зарабатывать</div>
+                        <div class="vertical__text">Генри Дэвид Торо: «Богатство - это способность полностью испытать жизнь».
+                        </div>
+                        <a href="#" class="vertical__bth">не ленись!</a>
+                     </div>
+                  </div>
+                  <div class="vertical__column">
+                     <div class="vertical__item">
+                        <div class="vertical__subtitle">Мотивация</div>
+                        <div class="vertical__label">зарабатывать</div>
+                        <div class="vertical__text">Феликс Деннис: «Вы никогда не разбогатеете, работая на своего босса».
+                        </div>
+                        <a href="#" class="vertical__bth">не ленись!</a>
+                     </div>
+                  </div>
                </div>
             </div>
          </div>
