Настроил шрифт и установил картинку

--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
    <div class="wrapper">
-      <div class="conteiner"></div>
+      <main class="page">
+         <div class="main-screen">
+            <div class="main-screen__bg ibg">
+               <img src="/img/bg_main.png" alt="bg_main">
+            </div>
+         </div>
+
+         <div class="content">
+
+         </div>
+      </main>
    </div>
 </body>
 </html>
