--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -11,7 +11,7 @@
       <main class="page">
          <div class="main-screen">
             <div class="main-screen__bg ibg">
-               <img src="/img/bg_main.png" alt="bg_main">
+               <img src="/img/bg_main.png" alt="">
             </div>
          </div>
 
@@ -20,5 +20,7 @@
          </div>
       </main>
    </div>
+
+   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </body>
 </html>
