--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -2,25 +2,29 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="format-detection" content="telephone=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user.scalable=0">
+   <link rel="stylesheet" href="css/style.css">
    <title>aod</title>
 </head>
 <body>
    <div class="wrapper">
       <main class="page">
+         <!--@import "header.html"-->
          <div class="main-screen">
             <div class="main-screen__bg ibg">
-               <img src="/img/bg_main.png" alt="">
+               <img src="img/bg_02.png" alt="">
             </div>
          </div>
 
          <div class="content">
-
+            
          </div>
+         <!-- @import "footer.html" -->
       </main>
    </div>
-
-   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+   <!-- @import "js.html" -->
+<script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+<script src="js/script.js"></script></body>
 </body>
 </html>
