--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -10,7 +10,28 @@
 <body>
    <div class="wrapper">
       <main class="page">
-         <!--@import "header.html"-->
+         <header class="header">
+                <div class="header__row">
+                    <nav class="header__menu menu">
+                        <div class="menu__icon icon-menu">
+                           <span></span>
+                           <span></span>
+                           <span></span>
+                        </div>
+                        <div class="menu__body">
+                           <ul class="menu__list">
+                              <li><a href="" class="menu__ls">about us</a></li>
+                              <li><a href="" class="menu__ls">work</a></li>
+                              <li><a href="" class="menu__ls">shop</a></li>
+                              <li><a href="" class="menu__ls">contact</a></li>
+                           </ul>
+                        </div>
+                    </nav>
+                    <div class="header__logo">
+                     <img src="img/logo.png" alt="">
+                    </div>
+                </div>
+        </header>
          <div class="main-screen">
             <div class="main-screen__bg ibg">
                <img src="img/bg_02.png" alt="">
@@ -20,10 +41,8 @@
          <div class="content">
             
          </div>
-         <!-- @import "footer.html" -->
       </main>
    </div>
-   <!-- @import "js.html" -->
 <script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 <script src="js/script.js"></script></body>
 </body>
