сделал верхнее меню

--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -20,10 +20,10 @@
                         </div>
                         <div class="menu__body">
                            <ul class="menu__list">
-                              <li><a href="" class="menu__ls">about us</a></li>
-                              <li><a href="" class="menu__ls">work</a></li>
-                              <li><a href="" class="menu__ls">shop</a></li>
-                              <li><a href="" class="menu__ls">contact</a></li>
+                              <li><a href="" class="menu__link">about us</a></li>
+                              <li><a href="" class="menu__link">work</a></li>
+                              <li><a href="" class="menu__link">shop</a></li>
+                              <li><a href="" class="menu__link">contact</a></li>
                            </ul>
                         </div>
                     </nav>
