--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -37,9 +37,44 @@
                <img src="img/bg_02.png" alt="">
             </div>
          </div>
-
          <div class="content">
-            
+            <section class="generation">
+               <div class="conteiner">
+                  <div class="generation__block block">
+                     <div class="block__icon">
+                        <img src="/img/icons/title/icon_1.png">
+                     </div>
+                     <h1 class="block__title">A NEW GENERATION OF VINTAGE BIKE</h1>
+                     <div class="block__text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</div>
+                  </div>
+               </div>
+            </section>
+            <section class="brands">
+               <div class="brands__row">
+                  <div class="brands__column brands__column_b">
+                     <a href="" class="brands__item item">
+                        <span class="item__logo">
+                           <img src="/img/logos/logo_1.png">
+                        </span>
+                        <span class="item__image">
+                           <img src="/img/brands/01.png">
+                        </span>
+                     </a>
+                  </div>
+                  <div class="brands__column">
+                     <div class="brands__content block">
+                        <div class="block__icon">
+                           <img src="/img/icons/title/icon_2.png">
+                        </div>
+                        <h2 class="block__title">vintage Oliva</h2>
+                        <div class="block__text block__text_j"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
+                        </div>
+                        <div class="brands__image">
+                           <img src="/img/brands/02.png" alt="">
+                        </div>
+                     </div>
+               </div>
+            </section>
          </div>
       </main>
    </div>
