сделал до конца 2 блок и 3, начал 4 блокс адаптивом

--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -54,10 +54,10 @@
                   <div class="brands__column brands__column_b">
                      <a href="" class="brands__item item">
                         <span class="item__logo">
-                           <img src="/img/logos/logo_1.png">
+                           <img src="img/logos/logo_3.png" alt="">
                         </span>
-                        <span class="item__image">
-                           <img src="/img/brands/01.png">
+                        <span class="item__image ibg">
+                           <img src="img/brands/01.png" alt="">
                         </span>
                      </a>
                   </div>
@@ -69,10 +69,69 @@
                         <h2 class="block__title">vintage Oliva</h2>
                         <div class="block__text block__text_j"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
                         </div>
-                        <div class="brands__image">
+                        <div class="brands__image ibg">
                            <img src="/img/brands/02.png" alt="">
                         </div>
                      </div>
+               </div>
+            </section>
+            <section class="brands brands_rev">
+               <div class="brands__row">
+                  <div class="brands__column brands__column_b">
+                     <a href="" class="brands__item item">
+                        <span class="item__logo">
+                           <img src="img/logos/logo_1.png" alt="">
+                        </span>
+                        <span class="item__image ibg">
+                           <img src="img/brands/04.png" alt="">
+                        </span>
+                     </a>
+                  </div>
+                  <div class="brands__column">
+                     <div class="brands__content block">
+                        <div class="block__icon">
+                           <img src="/img/icons/title/icon_4.png">
+                        </div>
+                        <h2 class="block__title">La Boriosa</h2>
+                        <div class="block__text block__text_j"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
+                        </div>
+                        <div class="brands__image ibg">
+                           <img src="/img/brands/03.png" alt="">
+                        </div>
+                     </div>
+               </div>
+            </section>
+            <section class="brands">
+               <div class="brands__row">
+                  <div class="brands__column">
+                     <a href="" class="brands__item item">
+                        <span class="item__logo">
+                           <img src="img/logos/logo_2.png" alt="">
+                        </span>
+                        <span class="item__image ibg">
+                           <img src="img/brands/05.png" alt="">
+                        </span>
+                     </a>
+                  </div>
+                  <div class="brands__column">
+                     <div class="brands__content block">
+                        <div class="block__icon">
+                           <img src="/img/icons/title/icon_5.png">
+                        </div>
+                        <h3 class="block__title">retrò Bike - M. Hulot</h3>
+                        <div class="block__text block__text_j"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
+                        </div>
+                        <div class="brands__image ibg">
+                           <img src="/img/brands/06.png" alt="">
+                        </div>
+                  </div>
+                  <div class="brands__column">
+                     <div class="brands__block">
+                        <span class="item__image ibg">
+                           <img src="img/brands/07.png" alt="">
+                        </span>
+                     </div>
+                  </div>
                </div>
             </section>
          </div>
