--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -101,7 +101,7 @@
                      </div>
                </div>
             </section>
-            <section class="brands">
+            <section class="brands brands_last">
                <div class="brands__row">
                   <div class="brands__column">
                      <a href="" class="brands__item item">
@@ -126,10 +126,40 @@
                         </div>
                   </div>
                   <div class="brands__column">
-                     <div class="brands__block">
+                     <a href="" class="brands__item item">
+                        <span class="item__logo">
+                           <img src="img/logos/logo_3.png" alt="">
+                        </span>
                         <span class="item__image ibg">
                            <img src="img/brands/07.png" alt="">
                         </span>
+                     </a>
+                  </div>
+               </div>
+            </section>
+            <section class="slider">
+               <div class="container">
+                  <div class="slider__body">
+                     <div class="slider__item">
+                        <div class="slider__icon"><img src="img/icons/twitter.png" alt=""></div>
+                        <h3 class="slider__title"> 
+                           AOD New York @aod <span>/ 35 min</span>
+                        </h3>
+                        <div class="slider__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</div>
+                     </div>
+                     <div class="slider__item">
+                        <div class="slider__icon"><img src="img/icons/twitter.png" alt=""></div>
+                        <h3 class="slider__title"> 
+                           AOD New York @aod <span>/ 35 min</span>
+                        </h3>
+                        <div class="slider__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</div>
+                     </div>
+                     <div class="slider__item">
+                        <div class="slider__icon"><img src="img/icons/twitter.png" alt=""></div>
+                        <h3 class="slider__title"> 
+                           AOD New York @aod <span>/ 35 min</span>
+                        </h3>
+                        <div class="slider__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</div>
                      </div>
                   </div>
                </div>
@@ -138,6 +168,6 @@
       </main>
    </div>
 <script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-<script src="js/script.js"></script></body>
+<script src="js/script.js"></script>
 </body>
 </html>
