Дошел до блока слайдера, пока не получилось

--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -147,7 +147,9 @@
                         </h3>
                         <div class="slider__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</div>
                      </div>
-                     <div class="slider__item">
+                     <!-- 
+                        ПОКА НЕ УДАЛОСЬ СДЕЛАТЬ СЛАЙДЕР, БЕЗ ЗНАНИЙ JS
+                        <div class="slider__item">
                         <div class="slider__icon"><img src="img/icons/twitter.png" alt=""></div>
                         <h3 class="slider__title"> 
                            AOD New York @aod <span>/ 35 min</span>
@@ -160,7 +162,7 @@
                            AOD New York @aod <span>/ 35 min</span>
                         </h3>
                         <div class="slider__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.</div>
-                     </div>
+                     </div>-->
                   </div>
                </div>
             </section>
