--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -39,7 +39,7 @@
          </div>
          <div class="content">
             <section class="generation">
-               <div class="conteiner">
+               <div class="container">
                   <div class="generation__block block">
                      <div class="block__icon">
                         <img src="/img/icons/title/icon_1.png">
@@ -166,6 +166,111 @@
                   </div>
                </div>
             </section>
+            <div class="shop">
+               <div class="shop__body">
+                  <div class="shop__column shop__column_b">
+                     <div class="shop__block block-shop">
+                        <div class="block-shop__row">
+                           <div class="block-shop__column">
+                              <a href="" class="block-shop__item block-shop__item_l item">
+                                 <span class="item__logo">
+                                    <img src="img/icons/bike.png" alt="">
+                                    <span>Shop now</span>
+                                 </span>
+                                 <span class="item__image ibg">
+                                    <img src="img/shop/01.png" alt="">
+                                 </span>
+                              </a>
+                           </div>
+                           <div class="block-shop__column">
+                              <a href="" class="block-shop__item block-shop__item_l item">
+                                 <span class="item__logo">
+                                    <img src="img/icons/bike.png" alt="">
+                                    <span>Shop now</span>
+                                 </span>
+                                 <span class="item__image ibg">
+                                    <img src="img/shop/02.png" alt="">
+                                 </span>
+                              </a>
+                           </div>
+                        </div>
+                        <a href="" class="block-shop__item item"> 
+                           <span class="item__logo">
+                              <img src="img/icons/bike.png" alt="">
+                              <span>Shop now</span>
+                           </span>
+                           <span class="item__image ibg">
+                              <img src="img/shop/03.png" alt="">
+                           </span>
+                        </a>
+                     </div>
+                  </div>
+                  <div class="shop__column">
+                     <a href="" class="block-shop__item block-shop__item_b item">
+                        <span class="item__logo">
+                           <img src="img/icons/bike.png" alt="">
+                           <span>Shop now </span>
+                        </span>
+                        <span class="item__image ibg">
+                           <img src="img/shop/04.png" alt="">
+                        </span>
+                     </a>
+                  </div>
+                  <div class="shop__column">
+                     <a href="" class="block-shop__item block-shop__item_b item">
+                        <span class="item__logo">
+                           <img src="img/icons/bike.png" alt="">
+                           <span>Shop now </span>
+                        </span>
+                        <span class="item__image ibg">
+                           <img src="img/shop/06.png" alt="">
+                        </span>
+                     </a>
+                  </div>
+                  <div class="shop__column shop__column_b">
+                     <div class="shop__block block-shop">
+                        <a href="" class="block-shop__item item"> 
+                           <span class="item__logo">
+                              <img src="img/icons/bike.png" alt="">
+                              <span>Shop now</span>
+                           </span>
+                           <span class="item__image ibg">
+                              <img src="img/shop/07.png" alt="">
+                           </span>
+                        </a>
+                        <div class="block-shop__row">
+                           <div class="block-shop__column">
+                              <a href="" class="block-shop__item block-shop__item_l item">
+                                 <span class="item__logo">
+                                    <img src="img/icons/bike.png" alt="">
+                                    <span>Shop now</span>
+                                 </span>
+                                 <span class="item__image ibg">
+                                    <img src="img/shop/08.png" alt="">
+                                 </span>
+                              </a>
+                           </div>
+                           <div class="block-shop__column">
+                              <a href="" class="block-shop__item block-shop__item_l item">
+                                 <span class="item__logo">
+                                    <img src="img/icons/bike.png" alt="">
+                                    <span>Shop now</span>
+                                 </span>
+                                 <span class="item__image ibg">
+                                    <img src="img/shop/09.png" alt="">
+                                 </span>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="shop__footer">
+                  <div class="container">
+                     <a href="" class="shop__btn">DISCOVER THE SHOP</a>
+                  </div>
+               </div>
+            </div>
          </div>
       </main>
    </div>
