доделал полностью старницу сайт с макета

--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -271,6 +271,58 @@
                   </div>
                </div>
             </div>
+            <div class="subscribe">
+               <div class="container">
+                  <div class="subscribe__body">
+                     <div class="subscribe__logo">
+                        <img src="img/logo.png" alt="">
+                     </div>
+                     <div class="subscribe__label">Stay on the saddle!</div>
+                     <form action="" class="subscribe__form">
+                        <div class="subscribe__input">
+                           <input placeholder="enter your email..." autocomplete="off" type="text" name="form[]" data-value="enter you email..." class="input">
+                        </div>
+                        <div class="subscribe__button">
+                           <button type="submit" class="subscribe__btn">GO</button>
+                        </div>
+                     </form>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="footer">
+            <div class="container">
+               <div class="footer__row">
+                  <div class="footer__column">
+                     <div class="footer__adress">
+                        <p>AOD New York</p>
+                        <p>2250 Lexington Avenue</p>
+                        <p>New York, NY 10035  - info@domain.com</p> 
+                     </div>
+                  </div>
+                  <div class="footer__column">
+                     <div class="footer__social social">
+                        <a class="social__link">
+                           <img src="img/icons/social/twitter.png" alt="twitter">
+                        </a>
+                        <a class="social__link">
+                           <img src="img/icons/social/facebook.png" alt="facebook">
+                        </a>
+                        <a class="social__link">
+                           <img src="img/icons/social/pinterest_.png" alt="pinterest">
+                        </a>
+                     </div>
+                  </div>
+                  <div class="footer__column">
+                     <a class="footer__dev dev">
+                        <span class="dev__text">Handcrafted by</span>
+                        <span class="dev__icon">
+                           <img src="img/icons/dev.png" alt="dev">
+                        </span>
+                     </a>
+                  </div>
+               </div>
+            </div>
          </div>
       </main>
    </div>
