добавил скрол и немного настроил бургер на js

--- a/HomeWork sites/aod/aod/index.html
+++ b/HomeWork sites/aod/aod/index.html
@@ -20,10 +20,10 @@
                         </div>
                         <div class="menu__body">
                            <ul class="menu__list">
-                              <li><a href="" class="menu__link">about us</a></li>
-                              <li><a href="" class="menu__link">work</a></li>
-                              <li><a href="" class="menu__link">shop</a></li>
-                              <li><a href="" class="menu__link">contact</a></li>
+                              <li><p href="" class="menu__link" id="menu__about">about us</p></li>
+                              <li><p href="" class="menu__link" id="menu__work">work</p></li>
+                              <li><p href="" class="menu__link" id="menu__shop">shop</p></li>
+                              <li><p href="" class="menu__link" id="menu__contact">contact</p></li>
                            </ul>
                         </div>
                     </nav>
@@ -38,7 +38,7 @@
             </div>
          </div>
          <div class="content">
-            <section class="generation">
+            <section class="generation" id="about">
                <div class="container">
                   <div class="generation__block block">
                      <div class="block__icon">
@@ -49,7 +49,7 @@
                   </div>
                </div>
             </section>
-            <section class="brands">
+            <section class="brands" id="work">
                <div class="brands__row">
                   <div class="brands__column brands__column_b">
                      <a href="" class="brands__item item">
@@ -166,7 +166,7 @@
                   </div>
                </div>
             </section>
-            <div class="shop">
+            <div class="shop" id="shop">
                <div class="shop__body">
                   <div class="shop__column shop__column_b">
                      <div class="shop__block block-shop">
@@ -290,7 +290,7 @@
                </div>
             </div>
          </div>
-         <div class="footer">
+         <div class="footer" id="footer">
             <div class="container">
                <div class="footer__row">
                   <div class="footer__column">
