попытался сделать меню

--- a/Sites/insite/insite/index.html
+++ b/Sites/insite/insite/index.html
@@ -11,15 +11,21 @@
    <div class="wrapper">
       <main class="page">
          <header class="header">
-            <div class="menu">
-               <div class="container">
-                  <div class="menu__text">
-                     <div class="menu__leg">
-                        <a href="" class="menu__eng">eng</a>
-                        <a href="" class="menu__rus">рус</a>
-                     </div>
+            <div class="header__row">
+               <nav class="header__menu menu">
+                  <div class="menu__body">
+                     <ul class="menu__list">
+                        <li><p class="menu__link">eng</p></li>
+                        <li><p class="menu__link">рус</p></li>
+                        <li><p class="menu__link">о нас</p></li>
+                        <li><p class="menu__link">проекты</p></li>
+                        <li><p class="menu__link">связаться с нами</p></li>
+                     </ul>
                   </div>
-               </div>
+                  <div class="menu__logo">
+                     <span class="menu__textb">insite</span>
+                  </div>
+               </nav>
             </div>
          </header>
       </main>
