почти закончил header

--- a/Sites/insite/insite/index.html
+++ b/Sites/insite/insite/index.html
@@ -15,15 +15,19 @@
                <nav class="header__menu menu">
                   <div class="menu__body">
                      <ul class="menu__list">
-                        <li><p class="menu__link">eng</p></li>
-                        <li><p class="menu__link">рус</p></li>
-                        <li><p class="menu__link">о нас</p></li>
-                        <li><p class="menu__link">проекты</p></li>
-                        <li><p class="menu__link">связаться с нами</p></li>
+                        <div class="menu__lang">
+                           <li><p class="menu__link">eng</p></li>
+                           <li><p class="menu__link">рус</p></li>
+                        </div>
+                        <div class="menu__logo">
+                           <span class="menu__textb">insite</span>
+                        </div>
+                        <div class="menu__about">
+                           <li><p class="menu__link">о нас</p></li>
+                           <li><p class="menu__link">проекты</p></li>
+                           <li><p class="menu__link">связаться с нами</p></li>
+                        </div>
                      </ul>
-                  </div>
-                  <div class="menu__logo">
-                     <span class="menu__textb">insite</span>
                   </div>
                </nav>
             </div>
